--- a/templates/index.html
+++ b/templates/index.html
@@ -26,7 +26,7 @@
 							<div class="inner">
 								<h1>CAGLAR TOGAN</h1>
 								<div>VIDEO ENGINEER AT PARAMOUNT+</div>
-								<div><span style="font-size: 0.8rem; letter-spacing: 0.2rem; text-transform: uppercase;">A full-stack PYHTON DEVELOPER</span>
+								<div><span style="font-size: 0.8rem; letter-spacing: 0.2rem; text-transform: uppercase;">A full-stack PYTHON DEVELOPER</span>
 								</div>	
 								
 							</div>
